--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,18 +24,23 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Saisie Fiche Frais</a>
+                        <a class="nav-link active" aria-current="page" href="{{ path('app_saisie_fiche_frais') }}">Saisie Fiche Frais</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_mes_fiches_frais') }}">Mes Fiches Frais</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+                       {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                        {{ app.user.prenom }} {{ app.user.nom }}
+                        {% endif %}
+
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-        {% block body %}{% endblock %}
+
     </body>
+    {% block body %}
 </html>
+{% endblock %}
