--- a/templates/saisie_fiche_frais/index.html.twig
+++ b/templates/saisie_fiche_frais/index.html.twig
@@ -24,6 +24,7 @@
             {{ form(formlfhf, {'attr':{'class':'text-center'}}) }}
         </div>
     </div>
+    <div class="container">
     <div class="row">
         <table class="table">
             <thead>
@@ -33,17 +34,22 @@
                 <th scope=col>Montant</th>
                 <th scope=col></th>
             </tr>
-            <tboy>
+            <tbody>
               {% for lfhf in fiche_frais.ligneHorsForfait %}
                 <tr>
                     <td>{{ lfhf.date | date('d/m/Y') }}</td>
                     <td>{{ lfhf.libelle }}</td>
                     <td>{{ lfhf.montant }}</td>
+                    <td><form method="post" action="{{ path('app_ligne_frais_hors_forfait_delete', {'id': lfhf.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ lfhf.id) }}">
+                            <button type="button" class="btn btn-danger">Supprimer</button>
+                        </form></td>
                 </tr>
-           </tboy>
+           </tbody>
             {% endfor %}
             </thead>
         </table>
+    </div>
     </div>
 {{ form_start(formlfhf) }}
 <div class="row m-1 p-1 border border-warning rounded text-center d-none">
