--- a/templates/mes_fiches_frais/index.html.twig
+++ b/templates/mes_fiches_frais/index.html.twig
@@ -9,8 +9,7 @@
     <h2>Mes frais du mois </h2>
     <div class="row m-1 p-1 border border-success rounded text-center">
 
-            <label class="form-label"
-            {{ form(myForm) }}
+            {{ form(myForme) }}
 
     </div>
 
